--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
     <h5 class="fs-3 "><strong>deposit</strong></h5>
     <h2>$<span id="currentAdd">00</span></h2>
   </div>
-  <div class="col-md-2 " id="withdraw">
+<!--   <div class="col-md-2 " id="withdraw">
     <h5 class="fs-3 "><strong>withdraw</strong></h5>
     <h2 ><span >$<span id="withdraw2">00</span></span></h2>
-  </div>
+  </div> -->
   <div class="col-md-2 " id="balance">
     <h5 class="fs-3 "><strong>balance</strong></h5>
     <h2 >$<span id="balance1">500</span></h2>
@@ -51,11 +51,11 @@
     <input id="input1" placeholder="$ amount you want to deposit" type="text" class="form-control ">
     <button id="button1" class="btn ">submit</button>
   </div>
-  <div id="withdrawmain" class="col-md-4">
+<!--   <div id="withdrawmain" class="col-md-4">
     <h4 id="withdraw1"><strong>withdraw</strong></h4>
     <input id="input2" placeholder="$ amount you want to withdraw" type="text" class="form-control ">
     <button id="button2" class="btn ">submit</button>
-  </div>
+  </div> -->
 </div>
 </div>
 
